<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/clkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txtLog"
        android:textColor="#0C2FEF"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAldready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.16000003" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="54dp"
        android:contentDescription="@string/descLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@drawable/appicon" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:width="330dp"
        android:background="@drawable/rounded_button"
        android:padding="10dp"
        android:text="@string/txtSign"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/clkTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txtTerms"
        android:textColor="#0C2FEF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxProceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxProceed"
        app:layout_constraintTop_toTopOf="@+id/checkBoxProceed" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLagayan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEmail3">
        <EditText
            android:id="@+id/boxName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_txtbox"
            android:drawableStart="@drawable/custom_name_icon"
            android:drawableLeft="@drawable/name_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/txtName"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail3" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtEmail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtName"
        android:textColor="#656565"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plstxt"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLagayan2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPass3"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/boxConfirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_txtbox"
            android:drawableStart="@drawable/custom_password_icom"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/confirmpas"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass3" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:textColor="#656565"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLagayan"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eamilLagayan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEmail2">
        <EditText
            android:id="@+id/boxSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_txtbox"
            android:drawableStart="@drawable/email_icon"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail2" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtPass3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtConfirm"
        android:textColor="#656565"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLagayan"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPass"
        android:textColor="#656565"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eamilLagayan"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="arial"
        android:text="@string/txtSign"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#373737"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971" />

    <TextView
        android:id="@+id/plstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:text="@string/txtPls"
        android:textColor="#1E1D1D"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/txtSignup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/txtSignup"
        app:layout_constraintTop_toTopOf="@+id/txtSignup"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtProceed"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLagayan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPass2"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/boxSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_txtbox"
            android:drawableStart="@drawable/custom_password_icom"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/txtPass"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintTop_toBottomOf="@+id/txtPass2" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>