<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">


    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="?selectableItemBackground"
        android:onClick="recoveryBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <TextView
        android:id="@+id/clkSignUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txtClickSignup"
        android:textColor="#0C2FEF"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/txtDont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:width="330dp"
        android:background="@drawable/rounded_button"
        android:padding="10dp"
        android:text="@string/txtContinue"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:onClick="recoverBtn"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforemail"
        app:layout_constraintVertical_bias="0.44">

        <EditText
            android:id="@+id/boxRecoverEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/rounded_txtbox"
            android:drawableStart="@drawable/email_icon"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textforemail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/txtAbove"
        android:textColor="#6A6A6A"
        app:layout_constraintEnd_toEndOf="@+id/txtForgot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtForgot"
        app:layout_constraintTop_toBottomOf="@+id/txtForgot" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="arial"
        android:text="@string/txtRec"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#373737"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />
</androidx.constraintlayout.widget.ConstraintLayout>